# dataproduct-builder-demo

./: AGENTS.md  README.md
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.github/: copilot-instructions.md
.github/plugin/: marketplace.json
hooks/: datacontract_lint.sh
skills/datacontract-test/: SKILL.md
skills/dataproduct-bootstrap/: SKILL.md
skills/dataproduct-bootstrap/templates/: README.md  data-product.odps.yaml  dbt_project.yml  openlineage.yml  profiles.yml.example  pyproject.toml
skills/dataproduct-bootstrap/templates/.github/workflows/: data-product.yml
skills/dataproduct-bootstrap/templates/datacontracts/: contract.odcs.yaml
skills/dataproduct-bootstrap/templates/macros/: get_custom_schema.sql
skills/dataproduct-bootstrap/templates/models/input_ports/: sources.yml
skills/dataproduct-bootstrap/templates/models/output_ports/: _model.yml
skills/dataproduct-bootstrap/templates/models/output_ports/v1/: _models.yml  contract.odcs.yaml
skills/dataproduct-bootstrap/templates/tests/: assert_updated_at_not_in_future.sql
skills/dataproduct-implement/: SKILL.md
